--- a/recipes/styles.css
+++ b/recipes/styles.css
@@ -1,4 +1,5 @@
 .main {
+  font-family: "Noto Sans", sans-serif;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -16,4 +17,16 @@
 
 .churros {
   max-width: 50%;
+}
+
+.main a {
+  text-decoration: none;
+  color: black;
+  margin: 20px 5px;
+  align-content: center;
+  text-align: center;
+  background-color:rgb(71, 181, 46);
+  height: 40px;
+  width: 90px;
+  border-radius: 5px;
 }
