--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 .main {
+  font-family: "Noto Sans", sans-serif;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -7,3 +8,21 @@
 .body {
   padding-left: 200px;
 }
+
+.main a {
+  text-decoration: none;
+  color: black;
+  margin: 5px 5px;
+  align-content: center;
+  text-align: center;
+  background-color:rgb(183, 132, 43);
+  height: 40px;
+  width: 130px;
+  border-radius: 5px;
+}
+
+.recipes {
+  margin-bottom: 30px;
+}
+
+
